tests/baselines/reference/stringLiteralsWithEqualityChecks02.errors.txt
tests/cases/conformance/types/literal/stringLiteralsWithEqualityChecks02.ts(8,5): error TS2367: Comparison of expressions of types '"foo"' and '"bar"' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert one of the expressions to 'unknown' first.
tests/cases/conformance/types/literal/stringLiteralsWithEqualityChecks02.ts(9,5): error TS2367: Comparison of expressions of types '"bar"' and '"foo"' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert one of the expressions to 'unknown' first.
tests/cases/conformance/types/literal/stringLiteralsWithEqualityChecks02.ts(10,5): error TS2367: Comparison of expressions of types '"foo"' and '"bar"' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert one of the expressions to 'unknown' first.
tests/cases/conformance/types/literal/stringLiteralsWithEqualityChecks02.ts(17,5): error TS2367: Comparison of expressions of types '"foo"' and '"bar"' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert one of the expressions to 'unknown' first.
tests/cases/conformance/types/literal/stringLiteralsWithEqualityChecks02.ts(18,5): error TS2367: Comparison of expressions of types '"bar"' and '"foo"' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert one of the expressions to 'unknown' first.
tests/cases/conformance/types/literal/stringLiteralsWithEqualityChecks02.ts(19,5): error TS2367: Comparison of expressions of types '"foo"' and '"bar"' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert one of the expressions to 'unknown' first.


==== tests/cases/conformance/types/literal/stringLiteralsWithEqualityChecks02.ts (6 errors) ====
    let x: "foo";
    let y: "foo" | "bar";
    
    let b: boolean;
    b = x == y;
    b = "foo" == y
    b = y == "foo";
    b = "foo" == "bar";
        ~~~~~~~~~~~~~~
!!! error TS2367: Comparison of expressions of types '"foo"' and '"bar"' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert one of the expressions to 'unknown' first.
    b = "bar" == x;
        ~~~~~~~~~~
!!! error TS2367: Comparison of expressions of types '"bar"' and '"foo"' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert one of the expressions to 'unknown' first.
    b = x == "bar";
        ~~~~~~~~~~
!!! error TS2367: Comparison of expressions of types '"foo"' and '"bar"' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert one of the expressions to 'unknown' first.
    b = y == "bar";
    b = "bar" == y;
    
    b = x != y;
    b = "foo" != y
    b = y != "foo";
    b = "foo" != "bar";
        ~~~~~~~~~~~~~~
!!! error TS2367: Comparison of expressions of types '"foo"' and '"bar"' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert one of the expressions to 'unknown' first.
    b = "bar" != x;
        ~~~~~~~~~~
!!! error TS2367: Comparison of expressions of types '"bar"' and '"foo"' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert one of the expressions to 'unknown' first.
    b = x != "bar";
        ~~~~~~~~~~
!!! error TS2367: Comparison of expressions of types '"foo"' and '"bar"' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert one of the expressions to 'unknown' first.
    b = y != "bar";
    b = "bar" != y;
    
    